Optimize pre-carry